# cov

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  rustfmt.toml
cargo-cov/: Cargo.toml  build.rs  clippy.toml
cargo-cov/res/templates/html/: config.toml
cargo-cov/res/templates/html/static/: common.css  file.js
cargo-cov/res/templates/html/tera/: file.html  index.html  macros.html
cargo-cov/src/: argparse.rs  cargo.rs  error.rs  lookup.rs  main.rs  report.rs  shim.rs  sourcepath.rs  template.rs  ui.rs  utils.rs
cov/: Cargo.toml  clippy.toml
cov/examples/: dump.rs  graphviz.rs  report.rs
cov/src/: deserializer.rs  error.rs  graph.rs  intern.rs  lib.rs  raw.rs  reader.rs  report.rs  utils.rs
cov/test-data/: Makefile  rebuild.py  trivial.clang.gcno  trivial.gcc7.gcda  trivial.gcc7.gcno  trivial.rustc.gcda  trivial.rustc.gcno
cov/test-data/branches.clang/: x.gcda  x.gcno  x.json
cov/test-data/branches.gcc7/: x.gcda  x.gcno  x.json
cov/test-data/branches.rustc/: x.gcda  x.gcno  x.json
cov/test-data/loops.clang/: x.gcda  x.gcno  x.json
cov/test-data/loops.gcc7/: x.gcda  x.gcno  x.json
cov/test-data/src/: branches.cpp  branches.rs  loops.cpp
cov/test-data/trivial.clang/: x.gcno  x.json
cov/test-data/trivial.gcc7/: x.gcda  x.gcno  x.json
cov/test-data/trivial.rustc/: x.gcda  x.gcno  x.json
cov/tests/: gcov.rs
specimen/dependencies/: Cargo.toml
specimen/dependencies/src/: lib.rs
specimen/multiple-tests/: Cargo.toml
specimen/multiple-tests/examples/: check2.rs
specimen/multiple-tests/src/: lib.rs
specimen/multiple-tests/tests/: ramsey44.rs  ramsey66.rs
specimen/simple/: Cargo.toml
specimen/simple/src/: lib.rs
specimen/workspace/: Cargo.toml
specimen/workspace/fact/: Cargo.toml
specimen/workspace/fact/src/: lib.rs
specimen/workspace/fib/: Cargo.toml
specimen/workspace/fib/src/: lib.rs
specimen/workspace/src/: main.rs
