[package]
name = "cargo-cov"
version = "0.0.3"
authors = ["kennytm <kennytm@gmail.com>"]
description = "Collect source coverage via LLVM-GCOV (⚠ not fully tested, may eat your laundry)"
build = "build.rs"
documentation = "https://docs.rs/crate/cargo-cov"
repository = "https://github.com/kennytm/cov"
license = "MIT"
keywords = ["cargo", "subcommand", "coverage", "gcov", "lcov"]
categories = ["command-line-utilities", "development-tools", "development-tools::cargo-plugins", "development-tools::testing"]

[badges]
maintenance = { status = "experimental" }

# Note: `pest` (via `tera`) is licensed in MPL-2.0, and `unidecode` (via `slug` via `tera`) in BSD-3.
# According to https://softwareengineering.stackexchange.com/q/317944, this should not cause any
# legal problem for keeping `cargo-cov` itself as MIT, as MPL-2.0 is non-viral.

[dependencies]
cov = { version = "0.0", path = "../cov", features = ["serde_json"] }

bitflags = { version = "1", default-features = false }
clap = "2"
env_logger = "0.5"
error-chain = "0.11" # <- waits for tera to update.
fs2 = "0.4"
fs_extra = "1"
glob = "0.2"
lazy_static = "1"
log = { version = "0.4", features = ["release_max_level_warn"] }
md5 = "0.3" # <- md5 needed for coveralls
natord = "1"
open = "1"
rand = "0.5"
rustc-demangle = "0.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
shell-escape = "0.1"
tempdir = "0.3"
tera = "0.11"
termcolor = "0.3"
toml = "0.4"
walkdir = "2"
